# ccompiler

./: .gitignore  .gitmodules  CMakeLists.txt  run.sh
examples/: arrays.c  fib_mem.c  fn_ptr.c  foo.c  fprintf_decl.c  hello.c  hello2.c  logger.c  problems.c  structs.c  switch.c  while.c
src/: C.g4  args.cpp  args.hpp  ast.hpp  io.cpp  io.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
src/visitors/: ASTBaseVisitor.hpp  ASTVisitor.hpp  dotVisitor.cpp  dotVisitor.hpp  printVisitor.cpp  printVisitor.hpp
